[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/menu_system.gd" id="1"]

[node name="MenuSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
text = "3D Gomoku"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SinglePlayerBtn" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="MultiplayerBtn" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="SettingsBtn" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitBtn" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AIMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AIMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="AIMenu/VBoxContainer"]
layout_mode = 2
text = "Select Difficulty"
horizontal_alignment = 1

[node name="EasyBtn" type="Button" parent="AIMenu/VBoxContainer"]
layout_mode = 2
text = "Easy"

[node name="MediumBtn" type="Button" parent="AIMenu/VBoxContainer"]
layout_mode = 2
text = "Medium"

[node name="HardBtn" type="Button" parent="AIMenu/VBoxContainer"]
layout_mode = 2
text = "Hard"

[node name="BackBtn" type="Button" parent="AIMenu/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="MultiplayerMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MultiplayerMenu/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"
horizontal_alignment = 1

[node name="HostBtn" type="Button" parent="MultiplayerMenu/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinBtn" type="Button" parent="MultiplayerMenu/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="GameCodeInput" type="LineEdit" parent="MultiplayerMenu/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Game Code"

[node name="BackBtn" type="Button" parent="MultiplayerMenu/VBoxContainer"]
layout_mode = 2
text = "Back"
